@@ -1,5 +1,6 @@
 GridClassKey 1.0.0-rc4
 =================================================
+- [#59] Add typeahead to Add TV Field combo box
 - add "Reset" button on setting's grid
 - add Properties field for new child
 - [#61][#62] enable TV updating on the grid
